# OakCapital-Terminal

./: README.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
backend/.github/workflows/: lint.yml
backend/Matching-Engine/: .gitignore  CMakeLists.txt  LOB_API.md  README.md  main.cpp
backend/Matching-Engine/Limit_Order_Book/: Book.cpp  Book.hpp  Limit.cpp  Limit.hpp  Order.cpp  Order.hpp
backend/Matching-Engine/include/: engine_c_api.h  engine_types.h
backend/Matching-Engine/internal/: Book.hpp  Order.hpp
backend/Matching-Engine/src/: Book.cpp  HTTPServer.cpp  Limit.cpp  Order.cpp  engine_c_api.cpp
backend/Matching-Engine/tests/: smoke_main.cpp
backend/docker/bot-strategy/: Dockerfile  grpc_server.py  strategy_pb2.py  strategy_pb2_grpc.py  user_script.py
backend/docs/: api_spec.md  architecture-how-it-all-works.md  cgo-engine-integration.md  market-maker-bot.md  market-simulation.md  readme-matching-engine.md  websocket_api.md
backend/internal/api/: book_manager.go  bot_handler.go  bot_script_handler.go  candle_handler.go  leaderboard_handler.go  limit_order_tracker.go  limit_order_tracker_test.go  market_handler.go  order_handler.go  order_handler_test.go  portfolio_handler.go  router.go  sim_handler.go  sim_types.go  types.go  watchlist_handler.go
backend/internal/auth/: email.go  handler.go  middleware.go  service.go
backend/internal/bot/: config.go  docker_runner.go  exchange_client.go  manager.go  models.go  portfolio.go  python_strategy.go  strategy.go
backend/internal/candle/: builder.go
backend/internal/db/: bot_strategy_repo.go  postgres.go  (+5 more)
backend/scripts/: bot_template.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
(+107 files in other folders)
